--- a/GaokaoCountdown/App.config
+++ b/GaokaoCountdown/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GaokaoCountdown.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+<userSettings>
+        <GaokaoCountdown.Properties.Settings>
+                <setting name="Year" serializeAs="String">
+                        <value>2024</value>
+                </setting>
+                <setting name="Date" serializeAs="String">
+                        <value>2024-06-07</value>
+                </setting>
+        </GaokaoCountdown.Properties.Settings>
+    </userSettings>
 </configuration>
