--- a/GaokaoCountdown/App.config
+++ b/GaokaoCountdown/App.config
@@ -17,6 +17,9 @@
                 <setting name="Date" serializeAs="String">
                         <value>2024-06-07</value>
                 </setting>
+                <setting name="AutoS" serializeAs="String">
+                        <value>False</value>
+                </setting>
         </GaokaoCountdown.Properties.Settings>
     </userSettings>
 </configuration>
