--- a/GaokaoCountdown/Properties/Settings.settings
+++ b/GaokaoCountdown/Properties/Settings.settings
@@ -6,7 +6,10 @@
       <Value Profile="(Default)">2024</Value>
     </Setting>
     <Setting Name="Date" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">2024/06/07</Value>
+      <Value Profile="(Default)">2024-06-07</Value>
+    </Setting>
+    <Setting Name="AutoS" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
