--- a/SigmaCountdown/App.config
+++ b/SigmaCountdown/App.config
@@ -20,6 +20,12 @@
                 <setting name="AutoS" serializeAs="String">
                         <value>False</value>
                 </setting>
+                <setting name="TopLeft" serializeAs="String">
+                        <value>False</value>
+                </setting>
+                <setting name="EventLevel_Text" serializeAs="String">
+                        <value>还剩</value>
+                </setting>
         </SigmaCountdown.Properties.Settings>
     </userSettings>
 </configuration>
