--- a/SigmaCountdown/Properties/Settings.settings
+++ b/SigmaCountdown/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SigamCountdown.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SigmaCountdown.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Year" Type="System.String" Scope="User">
@@ -10,6 +10,12 @@
     </Setting>
     <Setting Name="AutoS" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="TopLeft" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="EventLevel_Text" Type="System.String" Scope="User">
+      <Value Profile="(Default)">还剩</Value>
     </Setting>
   </Settings>
 </SettingsFile>
