--- a/SigmaCountdown/App.config
+++ b/SigmaCountdown/App.config
@@ -20,7 +20,7 @@
                 <setting name="AutoS" serializeAs="String">
                         <value>False</value>
                 </setting>
-                <setting name="TopLeft" serializeAs="String">
+                <setting name="TopRight" serializeAs="String">
                         <value>False</value>
                 </setting>
                 <setting name="EventLevel_Text" serializeAs="String">
