新增：显示事件年份开关 修复：自适应布局再优化和其他调整

--- a/SigmaCountdown/App.config
+++ b/SigmaCountdown/App.config
@@ -26,6 +26,9 @@
                 <setting name="EventLevel_Text" serializeAs="String">
                         <value>还剩</value>
                 </setting>
+                <setting name="EventYear_Visibility" serializeAs="String">
+                        <value>True</value>
+                </setting>
         </SigmaCountdown.Properties.Settings>
     </userSettings>
 </configuration>
