--- a/SigmaCountdown/Properties/Settings.settings
+++ b/SigmaCountdown/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="EventLevel_Text" Type="System.String" Scope="User">
       <Value Profile="(Default)">还剩</Value>
     </Setting>
+    <Setting Name="EventYear_Visibility" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
