--- a/SigmaCountdown/App.config
+++ b/SigmaCountdown/App.config
@@ -29,6 +29,9 @@
                 <setting name="EventYear_Visibility" serializeAs="String">
                         <value>True</value>
                 </setting>
+                <setting name="EventName_Text" serializeAs="String">
+                        <value>高考</value>
+                </setting>
         </SigmaCountdown.Properties.Settings>
     </userSettings>
 </configuration>
