--- a/SigmaCountdown/SigmaCountdown.csproj
+++ b/SigmaCountdown/SigmaCountdown.csproj
@@ -153,10 +153,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HandyControl">
-      <Version>3.4.0</Version>
+      <Version>3.5.1</Version>
     </PackageReference>
     <PackageReference Include="TaskScheduler">
-      <Version>2.10.1</Version>
+      <Version>2.11.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -175,4 +175,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>rd /s /q "de" "es" "fr" "it" "ja" "pl" "ru" "sv" "tr" "zh-Hant"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
