--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /SigmaCountdown/obj
 /SigmaCountdown/bin/Debug
 /SigmaCountdown/bin/Release
+/SigmaCountdown/.vs/SigmaCountdown.csproj.dtbcache.json
