--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /SigmaCountdown/bin/Debug
 /SigmaCountdown/bin/Release
 /SigmaCountdown/.vs/SigmaCountdown.csproj.dtbcache.json
+/SigmaCountdown/bin
